bk_ida/gccida/g1/cselib_lookup_mem
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/cselib_lookup_mem/src/cselib.c:1212:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v3; // r15d 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/cselib_lookup_mem/src/cselib.c:1226:10: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( ( ( mode_class_0[v2] & 0xFFFFFFFB) == 2 || mode_class_0[v2] == MODE_VECTOR_FLOAT) && flag_float_store ) 
         ^~~~~~~~~~~~
         mode_class
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/cselib_lookup_mem/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/cselib_lookup_mem/src/cselib.c:1226:49: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( ( ( mode_class_0[v2] & 0xFFFFFFFB) == 2 || mode_class_0[v2] == MODE_VECTOR_FLOAT) && flag_float_store ) 
                                                ^~~~~~~~~~~~
                                                mode_class
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/cselib_lookup_mem/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/cselib_lookup_mem/src/cselib.c:1228:38: error: use of undeclared identifier 'machine_mode'
v4 = cselib_lookup( x->fld[0].rtx, ( machine_mode)v2, create); 
                                     ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/cselib_lookup_mem/src/cselib.c:1251:47: error: use of undeclared identifier 'machine_mode'
elt = new_cselib_val( ++next_unknown_value, ( machine_mode)v2); 
                                              ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/cselib_lookup_mem/src/cselib.c:1255:28: error: use of undeclared identifier 'hash_table_0'; did you mean 'hash_table'?
*htab_find_slot_with_hash( hash_table_0, v9, value, INSERT) = elt; 
                           ^~~~~~~~~~~~
                           hash_table
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/cselib_lookup_mem/src/cselib.c:82:15: note: 'hash_table' declared here
static htab_t hash_table;
              ^
6 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/cselib_lookup_mem/src/obj/cselib.o] Error 1
